Switch to a blocking strategy for analytics components